k8s/app-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gosample


---
apiVersion: v1
kind: Service
metadata:
    name: initial-service
    namespace: gosample
spec:
    type: ClusterIP
    selector:
      application: initial-service
    ports:
      - port: 80
        targetPort: 8080


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: initial-service
  namespace: gosample
spec:
  replicas: 1
  selector:
    matchLabels:
      application: initial-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        application: initial-service
    spec:
      containers:
        - name: initial-service
          image: dragonqos/gosample
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
