k8s/service0-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: service0-service
    namespace: gosample
spec:
    type: NodePort
    selector:
      application: service0-service
    ports:
      - port: 8080
        nodePort: 30000
        protocol: TCP


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service0-service
  namespace: gosample
spec:
  replicas: 1
  selector:
    matchLabels:
      application: service0-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        application: service0-service
    spec:
      containers:
        - name: service0-service
          image: dragonqos/service0
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
